# vlasovius

./: .gitignore  AUTHORS  E.txt  Makefile.am  REFERENCES  configure.ac  configure~  test_direct_interpolator.txt  test_pou_interpolator.txt
Ef/: f_video.txt
test/twoStream/rkhs_direct/16x64_1_16/: statistics.csv
vlasovius/: makefile.am
vlasovius/geometry/: bounding_box.cpp  bounding_box.h  kd_tree.cpp  kd_tree.h  makefile.am
vlasovius/integrators/: gauss_konrod.h  gauss_konrod.tpp
vlasovius/interpolators/: directInterpolator.cpp  directInterpolator.h  direct_interpolator.h  direct_interpolator.tpp  periodic_pou_interpolator.cpp  periodic_pou_interpolator.h  periodic_pou_interpolator.tpp  piecewise_interpolator.h  piecewise_interpolator.tpp  pou_interpolator.cpp  pou_interpolator.h  pou_interpolator.tpp
vlasovius/kernels/: makefile.am  periodised_kernel.h  periodised_kernel.tpp  rbf_kernel.h  rbf_kernel.tpp  tensorised_kernel.h  tensorised_kernel.tpp  wendland.cpp  wendland.h  wendland.tpp
vlasovius/misc/: blas.cpp  blas.hpp  config.hpp  fields.hpp  gmres.hpp  gmres.tpp  lapack.hpp  lsmr.hpp  periodic_poisson_1d.h  poisson_fft.h  poisson_fft.tpp  random.h  row_iter.h  rump_summation.h  simd.h  simd_avx.tpp  simd_scalar.tpp  splines.hpp  stopwatch.h  xv_kernel.h
vlasovius/poisson/: blas.cpp  blas.hpp  config.hpp  fields.hpp  gmres.hpp  lapack.cpp  lapack.hpp  lsmr.hpp  lsmr.tpp  makefile.am  poissonfft.cpp  poissonfft.hpp  splines.hpp
vlasovius/trees/: kd_tree.cpp  kd_tree.cpp.save  kd_tree.h  makefile.am  quadtree.cpp  quadtree.h
(+1 files in other folders)
